# RookieAI_yolov8

./: .gitignore  Announcement.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Parameter_explanation.md  Parameter_explanation.txt  README.md  RookAI_V2.3.3.py  RookieAI.py  RookieAI_YOLOv8_V2.2.3.1.py  RookieAI_YOLOv8_V2.2.3.4.py  RookieAI_YOLOv8_V2.2.py  RookieAI_YOLOv8_V2.3.2.py  RookieAI_YOLOv8_V2.4.0(test).py  RookieAI_YOLOv8_V2.4.1.py  RookieAI_YOLOv8_V2.4.2.py  RookieAI_YOLOv8_V2.4.3.py  RookieAI_YOLOv8_test_optimization.py  RookieAI_YOLOv8_test_optimization_newGUI.py  RookieAI_YOLOv8_test_optimization_oldGUI.py  __version__  color.py  main.py  main_test.py  numpy  pyproject.toml  recoil_control.py  requirements.txt  settings.config  settings.json  test_0.py  键值.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: update-changelog.yml  update_version_pr.yml
Beta/: requirements.txt
Beta/V2.3.3(beta)/: settings.json  (+1 more)
Module/: announcement.py  config.py  const.py  control.py  draw_screen.py  jump_detection.py  keyboard.py  logger.py  mouse.py
RookieAI_English/: Parameter_explanation.txt  README.md  RookAI_V2.3.3.py  RookieAI_YOLOv8_V2.3.3(English,_added_antirecoil).py  RookieAI_YOLOv8_V2.3.3(test_English).py  Thanks.txt  color.py  pyvenv.cfg  recoil_control.py  recoilless_config.json  requirements.txt  settings.config  settings.json
Tools/: PT_to_TRT.py  cuDNN_download_V9.3_12.6.bat  install_torch.py  launcher.py  test_torch.py
UI/: RookieAiWindow.ui  automatic_trigger_set_dialog.py
Utils/: exception.py  revision.py
V3.0_Dev/: RookieAI.py  log.txt  settings.json
configs/: config.py  path_config.py
customLib/: animated_status.py  animated_status_test_ui.py
data/: RookieAiWindow.ui
module/: config.py  const.py  logger.py  mouse.py
services/: log.py  queue.py
utils/: UIManager.py  config.py  revision.py
(+51 files in other folders)
