[project]
authors = [
  {name = "Passer1072", email = "csy108729@gmail.com"},
  {name = "molanp", email = "molanpp@outlook.com"},
]
dependencies = [
  "chardet >=5.2.0,<6.0.0",
  "dxcam >=0.0.5,<0.0.6",
  "mouse >=0.7.1,<0.8.0",
  "mss ==6.1.0",
  "numpy >=1.23.0,<3.0.0",
  "opencv-python >=4.11.0.86,<5.0.0.0",
  "pillow >=11.1.0,<12.0.0",
  "psutil >=6.1.1,<7.0.0",
  "pyautogui >=0.9.54,<0.10.0",
  "pynput >=1.7.7,<2.0.0",
  "pyqt6 >=6.8.0,<7.0.0",
  "pywin32 >=308,<309",
  "requests >=2.32.3,<3.0.0",
  "ultralytics >=8.3.65,<9.0.0",
]
description = "AI self-aiming project based on yolov8"
license = {text = "MIT"}
name = "RookieAI"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[[tool.poetry.source]]
name = "ali"
priority = "primary"
url = "https://mirrors.aliyun.com/pypi/simple/"
